# easy_xxhash64

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
__git_hooks/: post-commit  pre-commit
src/: file_hash.rs  lib.rs  sixty_four.rs
